<resources>
    <string name="app_name">Hoot</string>
    <string name="title_activity_name_page">NamePage</string>
    <string name="title_activity_calendar_page">CalendarPage</string>
    <string name="title_activity_home_page">HomePage</string>
    <string name="title_activity_checklist">Checklist</string>
    <string name="title_activity_goals_page">Set your Goals</string>
    <string name="title_activity_expand_on_feelings_page">ExpandOnFeelingsPage</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_reflection_page">ReflectionPage</string>
    <string name="hello">Hello\n</string>
    <string name="max_character">Max Character: 13</string>
    <string name="hello_with_space">Hello\u0020</string>
    <string name="expand_on_your_feelings">Expand On Your Feelings</string>
    <string name="expand_feelings_pg">How are you feeling?\n\n</string>
    <string name="back">Back</string>
    <string name="goals_for_the_day">Goals For The Day</string>
    <string name="title_activity_sound_page">SoundPage</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="add_your_own">Add Your Own…</string>
    <string name="make_your_bed">Make Your Bed</string>
    <string name="brush_your_teeth">Brush Your Teeth</string>
    <string name="message_a_friend">Message A Friend</string>
    <string name="how_are_you_feeling_today">How are you feeling today?</string>
    <string name="okay">OKAY</string>
    <string name="hello_there">Hello there…</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="type_your_name_here">Type your name here!</string>
    <string name="what_s_your_name">What\'s Your Name?</string>
    <string name="need_to_relax">Need to Relax?</string>
    <string name="stop_music">Stop Music</string>
    <string name="goals_page_subheading">Add and edit your goals that you wish to fulfil</string>
    <string name="here_s_some_sounds_we_think_you_ll_enjoy">Here\'s some sounds we think you\'ll enjoy!</string>
    <string name="awesome">Awesome</string>
    <string name="awful">Awful</string>
    <string name="choose_image">Choose Image</string>
    <string name="cancel">Cancel</string>
    <string name="type_here_to_expand_on_how_you_re_feeling">Type here to expand on how you\'re feeling!</string>
    <string name="happy">Happy</string>
    <string name="sad">Sad</string>
    <string name="save">Save</string>
    <string name="how_does_expanding_make_you_feel">How does expanding make you feel?</string>
    <string name="type_your_goal">Type Your Goal</string>
    <string name="to_home">To home</string>
    <string name="reflection">Reflection</string>
    <string name="soundpagenav">soundPageNav</string>
    <string name="homepagenav">homePageNav</string>
    <string name="goalspagenav">goalsPageNav</string>
    <string name="playsoundsad">playSoundSad</string>
    <string name="playsoundokay">playSoundokay</string>
    <string name="playsoundhappy">playsoundhappy</string>
    <string name="branchowl">branchOwl</string>
    <string name="imagecrosschecklist">imageCrossChecklist</string>
    <string name="imagecrosschecklist2">imageCrossChecklist2</string>
    <string name="imagecrosschecklist3">imageCrossChecklist3</string>
    <string name="imageplusicon">imagePlusIcon</string>
    <string name="goalspagesectionbg">goalsPageSectionBg</string>
    <string name="gotogoalspage">goToGoalsPage</string>
    <!--    <string name="continue">Continue</string>-->
</resources>